<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="200dp"
    android:layout_height="350dp"
    android:background="@color/light_blue"
    android:elevation="10dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="3dp"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:layout_width="3dp"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/name"
        android:imeOptions="flagNoExtractUi"
        app:layout_constraintEnd_toEndOf="@id/height"
        app:layout_constraintStart_toStartOf="@id/width"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/width"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/width"
        android:imeOptions="flagNoExtractUi"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@id/height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/height"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/height"
        android:imeOptions="flagNoExtractUi"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/width"
        app:layout_constraintTop_toTopOf="@id/name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/x"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/x"
        android:imeOptions="flagNoExtractUi"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@id/y"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/width" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/y"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/y"
        android:imeOptions="flagNoExtractUi"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/x"
        app:layout_constraintTop_toTopOf="@id/width" />

    <com.pccontroll.ui.components.AwesomeImageDefault
        android:id="@+id/color_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/color_edit_text"
        app:layout_constraintEnd_toStartOf="@id/color_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/color_edit_text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/color_edit_text"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/color"
        android:imeOptions="flagNoExtractUi"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@id/y"
        app:layout_constraintStart_toStartOf="@id/y"
        app:layout_constraintTop_toTopOf="@id/y" />

    <TextView
        android:id="@+id/bind_char"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="@id/x"
        app:layout_constraintTop_toTopOf="@id/color_edit_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bind"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/blue"
        android:text="@string/bind"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@id/color_edit_text"
        app:layout_constraintStart_toStartOf="@id/color_edit_text"
        app:layout_constraintTop_toTopOf="@id/color_edit_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/remove"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/blue"
        android:text="@string/remove"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/close" />


</androidx.constraintlayout.widget.ConstraintLayout>