<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        onTouch="@{vm.onTouch}"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/mouse"
            android:textSize="@dimen/TEXT_SIZE_Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.pccontroll.ui.components.AwesomeImageDefault
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:onClick="@{()-> vm.onBackClick()}"
            android:elevation="10dp"
            android:text=""
            android:textColor="@color/blue"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/left"
            style="@style/DefaultActionButton"
            android:onClick="@{()-> vm.onLeftClick()}"
            android:text="@string/left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/right"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/right"
            style="@style/DefaultActionButton"
            android:backgroundTint="@color/blue"
            android:onClick="@{()-> vm.onRightClick()}"
            android:text="@string/right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/left" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <variable
            name="vm"
            type="com.pccontroll.ui.viewmodel.MouseFormVM" />
    </data>
</layout>