<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/enter_address"
            android:textSize="@dimen/TEXT_SIZE_Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_layout"
            error="@{vm.error}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.pccontroll.ui.components.InputEditText
                android:id="@+id/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@{vm.field}"
                android:imeOptions="actionGo"
                android:text="@={vm.value}"
                android:textSize="@dimen/TEXT_SIZE_Medium"
                android:theme="@style/Base.Widget.MaterialComponents.TextInputLayout.WithoutChangingFocusedColor"
                app:field="@{vm.field}">

                <requestFocus />
            </com.pccontroll.ui.components.InputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back"
            style="@style/DefaultActionButton"
            android:onClick="@{()-> vm.onBackClick()}"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ok"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ok"
            style="@style/DefaultActionButton"
            android:backgroundTint="@color/blue"
            android:onClick="@{()-> vm.onOkClick()}"
            android:text="@string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/back" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <variable
            name="vm"
            type="com.pccontroll.ui.viewmodel.EnterPCAddressFormVM" />
    </data>
</layout>