<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="vm"
            type="com.pccontroll.ui.viewmodel.SelectActionFormVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/select_action"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@id/keyboardAndMouseLayout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/keyboardAndMouseLayout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:onClick="@{()-> vm.onKeyboardClick()}"
            app:layout_constraintBottom_toTopOf="@id/gamePadLayout"
            app:layout_constraintTop_toTopOf="parent">

            <com.pccontroll.ui.components.AwesomeImageDefault
                android:id="@+id/keyboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:text=""
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="80sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="50sp"
                android:gravity="center"
                android:text="@string/keyboard_and_mouse"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@id/gamePadLayout"
            app:layout_constraintTop_toBottomOf="@id/keyboardAndMouseLayout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/gamePadLayout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:onClick="@{()-> vm.onGamepadClick()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/keyboardAndMouseLayout">

            <com.pccontroll.ui.components.AwesomeImageBrands
                android:id="@+id/gamePad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="40dp"
                android:text=""
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="80sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50sp"
                android:layout_marginBottom="40dp"
                android:text="@string/gamepad"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@id/gamePadLayout" />

        <com.google.android.material.button.MaterialButton
            style="@style/DefaultActionButton"
            android:layout_width="match_parent"
            android:backgroundTint="@color/blue"
            android:onClick="@{()-> vm.onBackClick()}"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>