<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="vm"
            type="com.pccontroll.ui.viewmodel.SelectConnectionFormVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/select_connection_type"
            android:textSize="30sp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@id/wifiLayout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/wifiLayout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:onClick="@{()-> vm.onWiFiClick()}"
            app:layout_constraintBottom_toTopOf="@id/bluetoothLayout"
            app:layout_constraintTop_toTopOf="parent">

            <com.pccontroll.ui.components.AwesomeImageDefault
                android:id="@+id/wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:text=""
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="80sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="50sp"
                android:text="@string/wifi"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@id/bluetoothLayout"
            app:layout_constraintTop_toBottomOf="@id/wifiLayout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bluetoothLayout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:onClick="@{()-> vm.onBluetoothClick()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wifiLayout">

            <com.pccontroll.ui.components.AwesomeImageBrands
                android:id="@+id/bluetooth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="40dp"
                android:text=""
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="80sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50sp"
                android:layout_marginBottom="40dp"
                android:text="@string/bluetooth"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@id/bluetoothLayout" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/exit"
            android:onClick="@{()-> vm.onBackClick()}"
            android:textAllCaps="false"
            android:backgroundTint="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>